--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,14 @@
 	<title></title>
 	<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="vip.js"></script>
+
 	<style type="text/css">
 		* { padding: 0; margin: 0; }
 		div { width: 150px; height: 50px; cursor: pointer; }
 		ul li { list-style: none; padding: 7px;}
 		ul li:hover { box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.05); }
+
+		#status { color: #818182; }
 	</style>
 </head>
 <body>
@@ -18,8 +21,14 @@
 		<ul></ul>
 		<hr>
 		<ul>
+			<li id="use_default" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">使用默认数据源</li>
 			<li id="update">更新数据源</li>
 		</ul>
+		<hr>
+		<ul>
+			<li id="status"></li>
+		</ul>
 	</div>
+
 </body>
 </html>
